--- a/notebook/recommender_system.ipynb
+++ b/notebook/recommender_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies=pd.read_csv('tmdb_5000_movies.csv')\n",
-    "credits = pd.read_csv('tmdb_5000_credits.csv')"
+    "movies=pd.read_csv('data/tmdb_5000_movies.csv')\n",
+    "credits = pd.read_csv('data/tmdb_5000_credits.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "0  Enter the World of Pandora.  Avatar           7.2       11800  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 4809 entries, 0 to 4808\n",
+      "RangeIndex: 4809 entries, 0 to 4808\n",
       "Data columns (total 23 columns):\n",
       " #   Column                Non-Null Count  Dtype  \n",
       "---  ------                --------------  -----  \n",
@@ -351,7 +351,7 @@
       " 21  cast                  4809 non-null   object \n",
       " 22  crew                  4809 non-null   object \n",
       "dtypes: float64(3), int64(5), object(15)\n",
-      "memory usage: 901.7+ KB\n"
+      "memory usage: 864.2+ KB\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "0"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        " 'name': 'Stephen E. Rivkin'}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "0  [Sam Worthington, Zoe Saldana, Sigourney Weaver]  [James Cameron]  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
        "0  [Sam Worthington, Zoe Saldana, Sigourney Weaver]  [James Cameron]  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
        "0  [SamWorthington, ZoeSaldana, SigourneyWeaver]  [JamesCameron]  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
        "0  [In, the, 22nd, century,, a, paraplegic, Marin...  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,49 +1213,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stem(text):\n",
-    "    y = []\n",
-    "    for i in text.split():\n",
-    "        y.append(ps.stem(i))\n",
-    "    return ' '.join(y)"
+    "# def stem(text):\n",
+    "#     y = []\n",
+    "#     for i in text.split():\n",
+    "#         y.append(ps.stem(i))\n",
+    "#     return ' '.join(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_df['tags']=new_df['tags'].apply(stem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8476\\3514595201.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_17448\\1575488156.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  new_df['tags']=new_df['tags'].apply(stem)\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_df['tags']=new_df['tags'].apply(stem)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8476\\2814853543.py:2: SettingWithCopyWarning: \n",
+      "  new_df['tags']=new_df['tags'].apply(lambda x:' '.join(x))\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_17448\\1575488156.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1271,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1309,7 @@
        "0     19995  Avatar  in the 22nd century, a paraplegic marine is di..."
       ]
      },
-     "execution_count": 133,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,14 +1320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8476\\1812721160.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_17448\\1812721160.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1349,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1387,7 @@
        "0     19995  Avatar  in the 22nd century, a paraplegic marine is di..."
       ]
      },
-     "execution_count": 135,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1456,18 +1449,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aliens vs Predator: Requiem\n",
-      "Aliens\n",
-      "Guardians of the Galaxy\n",
       "The Book of Life\n",
-      "Star Trek Into Darkness\n"
+      "Star Trek Into Darkness\n",
+      "Aliens\n",
+      "Alien\n",
+      "Aliens vs Predator: Requiem\n"
      ]
     }
    ],
@@ -1477,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1495,149 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>movie_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>19995</td>\n",
-       "      <td>Avatar</td>\n",
-       "      <td>in the 22nd century, a parapleg marin is dispa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>285</td>\n",
-       "      <td>Pirates of the Caribbean: At World's End</td>\n",
-       "      <td>captain barbossa, long believ to be dead, ha c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>206647</td>\n",
-       "      <td>Spectre</td>\n",
-       "      <td>a cryptic messag from bond’ past send him on a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>49026</td>\n",
-       "      <td>The Dark Knight Rises</td>\n",
-       "      <td>follow the death of district attorney harvey d...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>49529</td>\n",
-       "      <td>John Carter</td>\n",
-       "      <td>john carter is a war-weary, former militari ca...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4804</th>\n",
-       "      <td>9367</td>\n",
-       "      <td>El Mariachi</td>\n",
-       "      <td>el mariachi just want to play hi guitar and ca...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4805</th>\n",
-       "      <td>72766</td>\n",
-       "      <td>Newlyweds</td>\n",
-       "      <td>a newlyw couple' honeymoon is upend by the arr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4806</th>\n",
-       "      <td>231617</td>\n",
-       "      <td>Signed, Sealed, Delivered</td>\n",
-       "      <td>\"signed, sealed, delivered\" introduc a dedic q...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4807</th>\n",
-       "      <td>126186</td>\n",
-       "      <td>Shanghai Calling</td>\n",
-       "      <td>when ambiti new york attorney sam is sent to s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4808</th>\n",
-       "      <td>25975</td>\n",
-       "      <td>My Date with Drew</td>\n",
-       "      <td>ever sinc the second grade when he first saw h...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4806 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      movie_id                                     title  \\\n",
-       "0        19995                                    Avatar   \n",
-       "1          285  Pirates of the Caribbean: At World's End   \n",
-       "2       206647                                   Spectre   \n",
-       "3        49026                     The Dark Knight Rises   \n",
-       "4        49529                               John Carter   \n",
-       "...        ...                                       ...   \n",
-       "4804      9367                               El Mariachi   \n",
-       "4805     72766                                 Newlyweds   \n",
-       "4806    231617                 Signed, Sealed, Delivered   \n",
-       "4807    126186                          Shanghai Calling   \n",
-       "4808     25975                         My Date with Drew   \n",
-       "\n",
-       "                                                   tags  \n",
-       "0     in the 22nd century, a parapleg marin is dispa...  \n",
-       "1     captain barbossa, long believ to be dead, ha c...  \n",
-       "2     a cryptic messag from bond’ past send him on a...  \n",
-       "3     follow the death of district attorney harvey d...  \n",
-       "4     john carter is a war-weary, former militari ca...  \n",
-       "...                                                 ...  \n",
-       "4804  el mariachi just want to play hi guitar and ca...  \n",
-       "4805  a newlyw couple' honeymoon is upend by the arr...  \n",
-       "4806  \"signed, sealed, delivered\" introduc a dedic q...  \n",
-       "4807  when ambiti new york attorney sam is sent to s...  \n",
-       "4808  ever sinc the second grade when he first saw h...  \n",
-       "\n",
-       "[4806 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 188,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_pickle('movies.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
